--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,44 +4,90 @@
     package="com.heyanle.easybangumi">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-feature
+        android:name="android.hardware.touchscreen"
+        android:required="false" />
+
+    <uses-feature android:name="android.software.leanback"
+        android:required="false" />
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
-        android:networkSecurityConfig="@xml/network_security_config"
         android:name=".EasyApplication"
         android:allowBackup="false"
         android:icon="@mipmap/easy"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
-        android:theme="@style/Theme.EasyBangumi"
+        android:theme="@style/Theme.Leanback"
         tools:ignore="UnusedAttribute">
 
-        <activity android:name=".ui.main.MainActivity"
+        <!--TV -->
+
+        <activity
+            android:name=".tv.MainActivity"
+            android:banner="@drawable/app_icon_your_company"
             android:exported="true"
-            android:screenOrientation="sensor"
-            android:configChanges="uiMode">
+            android:icon="@drawable/app_icon_your_company"
+            android:label="@string/app_name"
+            android:logo="@drawable/app_icon_your_company"
+            android:screenOrientation="landscape"
+            >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.search.SearchActivity"/>
-        <activity android:name=".ui.detailplay.DetailPlayActivity"
-            android:launchMode="singleTask"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:screenOrientation="sensor"
-            tools:ignore="LockedOrientationActivity" />
-        <activity android:name=".ui.detailplay.DetailPlayWebViewActivity"
-            android:launchMode="singleTask"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:screenOrientation="sensor"
-            tools:ignore="LockedOrientationActivity" />
 
-        <activity android:name=".crash.CrashActivity"
-            android:process="com.heyanle.easybangumi.crash"/>
+        <activity
+            android:name=".tv.PlaybackActivity"
+            android:exported="false" />
+        <activity
+            android:name=".tv.BrowseErrorActivity"
+            android:exported="false" />
+
+<!--        手机-->
+
+        <activity
+            android:theme="@style/Theme.EasyBangumi"
+            android:name=".ui.main.MainActivity"
+            android:configChanges="uiMode"
+            android:exported="true"
+            android:screenOrientation="sensor">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:theme="@style/Theme.EasyBangumi"
+            android:name=".ui.search.SearchActivity" />
+        <activity
+            android:theme="@style/Theme.EasyBangumi"
+            android:name=".ui.detailplay.DetailPlayActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:launchMode="singleTask"
+            android:screenOrientation="sensor"
+            tools:ignore="LockedOrientationActivity" />
+        <activity
+            android:theme="@style/Theme.EasyBangumi"
+            android:name=".ui.detailplay.DetailPlayWebViewActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:launchMode="singleTask"
+            android:screenOrientation="sensor"
+            tools:ignore="LockedOrientationActivity" />
+        <activity
+            android:theme="@style/Theme.EasyBangumi"
+            android:name=".crash.CrashActivity"
+            android:process="com.heyanle.easybangumi.crash" />
+
     </application>
 
 </manifest>
