--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <!--TV -->
 
         <activity
-            android:name=".tv.MainActivity"
+            android:name=".tv.TvMainActivity"
             android:banner="@drawable/app_icon_your_company"
             android:exported="true"
             android:icon="@drawable/app_icon_your_company"
@@ -53,7 +53,9 @@
             android:exported="false" />
         <activity android:name=".tv.TvSearchActivity"
             android:exported="false"/>
-
+        <activity android:name=".tv.TvSettingsActivity"
+            android:theme="@style/LeanbackPreferences"
+            android:exported="false"/>
 <!--        手机-->
 
         <activity
