--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:required="false" />
 
     <uses-feature android:name="android.software.leanback"
-        android:required="false" />
+        android:required="true" />
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -30,11 +30,11 @@
 
         <activity
             android:name=".tv.TvMainActivity"
-            android:banner="@drawable/app_icon_your_company"
+            android:banner="@drawable/banner"
             android:exported="true"
-            android:icon="@drawable/app_icon_your_company"
+            android:icon="@drawable/banner"
             android:label="@string/app_name"
-            android:logo="@drawable/app_icon_your_company"
+            android:logo="@drawable/banner"
             android:screenOrientation="landscape"
             >
             <intent-filter>
