--- a/app/src/tv/AndroidManifest.xml
+++ b/app/src/tv/AndroidManifest.xml
@@ -26,39 +26,36 @@
         android:theme="@style/Theme.Leanback"
         tools:ignore="UnusedAttribute">
 
+        <!--TV -->
+
         <activity
-            android:theme="@style/Theme.EasyBangumi"
-            android:name=".ui.main.MainActivity"
-            android:configChanges="uiMode"
+            android:name=".tv.TvMainActivity"
+            android:banner="@drawable/banner"
             android:exported="true"
-            android:screenOrientation="sensor">
+            android:icon="@drawable/banner"
+            android:label="@string/app_name"
+            android:logo="@drawable/banner"
+            android:screenOrientation="landscape"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
-            android:theme="@style/Theme.EasyBangumi"
-            android:name=".ui.search.SearchActivity" />
+            android:name=".tv.PlaybackActivity"
+            android:exported="false" />
         <activity
-            android:theme="@style/Theme.EasyBangumi"
-            android:name=".ui.detailplay.DetailPlayActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:launchMode="singleTask"
-            android:screenOrientation="sensor"
-            tools:ignore="LockedOrientationActivity" />
-        <activity
-            android:theme="@style/Theme.EasyBangumi"
-            android:name=".ui.detailplay.DetailPlayWebViewActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:launchMode="singleTask"
-            android:screenOrientation="sensor"
-            tools:ignore="LockedOrientationActivity" />
-        <activity
-            android:theme="@style/Theme.EasyBangumi"
-            android:name=".crash.CrashActivity"
-            android:process="com.heyanle.easybangumi.crash" />
+            android:name=".tv.BrowseErrorActivity"
+            android:exported="false" />
+        <activity android:name=".tv.TvSearchActivity"
+            android:exported="false"/>
+        <activity android:name=".tv.TvSettingsActivity"
+            android:theme="@style/LeanbackPreferences"
+            android:exported="false"/>
+
 
     </application>
 
