--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.heyanle.easybangumi">
+    package="com.heyanle.easybangumi"
+    tools:ignore="ImpliedTouchscreenHardware,MissingLeanbackLauncher,MissingLeanbackSupport">
+
+
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <uses-feature
-        android:name="android.hardware.touchscreen"
-        android:required="false" />
-
-    <uses-feature android:name="android.software.leanback"
-        android:required="true" />
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-
+    <!-- productFlavors manifest will merger in it, so you would changing theirs manifest ,
+        see other manifest ,ect . app/phone/AndroidManifest.xml  -->
     <application
         android:name=".EasyApplication"
         android:allowBackup="false"
@@ -23,38 +21,9 @@
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Leanback"
         tools:ignore="UnusedAttribute">
 
-        <activity
-            android:theme="@style/Theme.EasyBangumi"
-            android:name=".ui.main.MainActivity"
-            android:configChanges="uiMode"
-            android:exported="true"
-            android:screenOrientation="sensor">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:theme="@style/Theme.EasyBangumi"
-            android:name=".ui.search.SearchActivity" />
-        <activity
-            android:theme="@style/Theme.EasyBangumi"
-            android:name=".ui.detailplay.DetailPlayActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:launchMode="singleTask"
-            android:screenOrientation="sensor"
-            tools:ignore="LockedOrientationActivity" />
-        <activity
-            android:theme="@style/Theme.EasyBangumi"
-            android:name=".ui.detailplay.DetailPlayWebViewActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:launchMode="singleTask"
-            android:screenOrientation="sensor"
-            tools:ignore="LockedOrientationActivity" />
         <activity
             android:theme="@style/Theme.EasyBangumi"
             android:name=".crash.CrashActivity"
