优化网络加载流程；修复长时间播放无法保持屏幕唤醒状态

--- a/app/src/tv/AndroidManifest.xml
+++ b/app/src/tv/AndroidManifest.xml
@@ -46,6 +46,9 @@
 
         <activity
             android:name=".tv.PlaybackActivity"
+            android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation|layoutDirection"
+            android:launchMode="singleTask"
+            android:resizeableActivity="true"
             android:exported="false" />
         <activity
             android:name=".tv.BrowseErrorActivity"
