--- a/app/src/phone/AndroidManifest.xml
+++ b/app/src/phone/AndroidManifest.xml
@@ -21,16 +21,38 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:screenOrientation="portrait"
+        android:theme="@style/Theme.EasyBangumi"
         tools:targetApi="31">
-
-
         <activity
-            android:name="com.heyanle.easy_crasher.CrashActivity"
-            android:process="com.heyanle.easybangumi.crash"
-            android:exported="true">
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize"
+            android:launchMode="singleTask"
+            android:theme="@style/Theme.EasyBangumi">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <data
+                    android:scheme="nav"
+                    android:host="play" />
+                <action android:name="android.intent.action.VIEW" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+            </intent-filter>
         </activity>
 
+
+        <service
+            android:name="com.zane.androidupnpdemo.service.ClingUpnpService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="ITOP.MOBILE.SIMPLE.SERVICE.SENSORSERVICE" />
+            </intent-filter>
+        </service>
 
     </application>
 
